--- a/e-commerce-app/src/components/ItemCard/ItemCard.module.scss
+++ b/e-commerce-app/src/components/ItemCard/ItemCard.module.scss
@@ -1,3 +1,13 @@
-
 .ItemCard {
+    border: 1px solid black;
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    &__Image {
+        height: 125px;
+        width: 125px;
+        filter: opacity(0.4) drop-shadow(0 0 0 red);
+    }
 }
