--- a/e-commerce-app/src/containers/CartList/CartList.module.scss
+++ b/e-commerce-app/src/containers/CartList/CartList.module.scss
@@ -1,8 +1,8 @@
 .CartList {
     &__Button {
-        background-color: blue;
+        background-color: #0d6efd;
         border-radius: 5px;
-        height: 40px;
+        height: 50px;
         width: 150px;
         color: white;
     }
