--- a/e-commerce-app/src/components/FeaturedCarousel/FeaturedCarousel.module.scss
+++ b/e-commerce-app/src/components/FeaturedCarousel/FeaturedCarousel.module.scss
@@ -1,16 +1,17 @@
-.FeaturedCarousel {
-    &__Item {
-        // background-color: black;
+#FeaturedCarousel {
+    &__Item1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    &__Item2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    &__Item3 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
-
-// #FeaturedCarousel__Item {
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-//   &__Image {
-//     width: 100%;
-//     height: 75%;
-//     margin-right: 100px;
-//   }
-// }
