--- a/e-commerce-app/src/components/ItemCard/ItemCard.module.scss
+++ b/e-commerce-app/src/components/ItemCard/ItemCard.module.scss
@@ -1,6 +1,7 @@
 .ItemCard {
-    border: 1px solid black;
-    width: 250px;
+    border: 1px solid #0d6efd;
+    border-radius: 5px;
+    width: 350px;
     display: flex;
     flex-direction: column;
     align-items: center;
