--- a/e-commerce-app/src/components/ProductInfo/ProductInfo.module.scss
+++ b/e-commerce-app/src/components/ProductInfo/ProductInfo.module.scss
@@ -1,5 +1,11 @@
+@use "./../../scss/partials/devices";
+
 .ProductInfo {
     display: flex;
+
+    @include devices.phone {
+        flex-direction: column;
+    }
 
     &__Container {
         padding: 50px;
@@ -12,7 +18,7 @@
     }
 
     &__Button {
-        background-color: blue;
+        background-color: #0d6efd;
         border-radius: 5px;
         height: 30px;
         width: 100px;
