--- a/e-commerce-app/src/containers/CartList/CartList.module.scss
+++ b/e-commerce-app/src/containers/CartList/CartList.module.scss
@@ -1,9 +1,27 @@
+@use "./../../scss/partials/devices";
+
 .CartList {
+    @include devices.larger {
+        margin: 0 1000px;
+    }
+    @include devices.tablet {
+        margin: 0 100px;
+    }
+    @include devices.phone {
+        margin: 0 10px;
+    }
+    &__Title {
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    &__Total {
+        font-weight: bold;
+    }
     &__Button {
         background-color: #0d6efd;
+        color: white;
         border-radius: 5px;
         height: 50px;
         width: 150px;
-        color: white;
     }
 }
