--- a/e-commerce-app/src/components/FeaturedCarousel/FeaturedCarousel.module.scss
+++ b/e-commerce-app/src/components/FeaturedCarousel/FeaturedCarousel.module.scss
@@ -1,14 +1,6 @@
 #FeaturedCarousel {
-    &__Item1 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    &__Item2 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+    &__Item1,
+    &__Item2,
     &__Item3 {
         display: flex;
         flex-direction: column;
